--- a/bwe.html
+++ b/bwe.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Basic Website Example</title>
-    <link href="designe.css" type="text/css" rel="stylesheet">
+    <link href="./designe.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato" type="text/css" rel="stylesheet">
 </head>
 <body>
