--- a/bwe.html
+++ b/bwe.html
@@ -8,7 +8,7 @@
 <body>
     <section>
     <div class="navicon">
-        <!-- <a href="#Home"><img src="./icon/navicon.png" alt="navicon"></a> -->
+        <a href="#Home"><img src="./icon/navicon.png" alt="navicon"></a>
         <a href="#Home"><Span>Basic Website Example</Span></a>
     </div>
     <nav>
